static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Source+Sans+Pro:wght@200;300;400;600&display=swap');

body {
    background-color: #fafaff;
}

.hide {
    display: none;
}

@keyframes rotate-fan {
    0% {
      transform: rotate(0);
    }
    100% {
      transform: rotate(360deg);
    }
  }

.fan-spin:hover img {
    animation: rotate-fan 2s linear 2;
    -webkit-animation: rotate-fan 2s linear 2; 
}

/* fonts */

.ssp-400 {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 400;
}

.q-400 {
    font-family: 'Quicksand', sans-serif;
    font-weight: 400;
}

.fs-30 {
    font-size: 30px;
}

.fs-20 {
    font-size: 20px;
}

/* background colors */

.darkblue-bg {
    background-color: #0068b5
}

.lightblue-bg {
    background-color: #00a3f6;
}

.green-bg {
    background-color: #76b900;
}

.red-bg {
    background-color: #bd0000;
}

.ghostwhite-bg {
    background-color: #fafaff;
}

.gray-bg {
    background-color: #777777;
}

/* text colors */

.darkblue-tx {
    color: #0068b5
}

.ghostwhite-tx {
    color: #fafaff;
}

.gray-tx {
    color: #777777;
}

.red-tx {
    color: #bd0000;;
}

/* navigation bar */

.navbar {
    padding: 10px;
    border-bottom: 1px solid #77777725;
}

.navbar-brand {
    color: #000;
    padding-left: 10px;
    font-family: 'Quicksand', sans-serif;
    font-size: 30px;
    font-weight: bold;
}

.navbar-brand:hover {
    color: #bd0000;
}

.nav-item {
    letter-spacing: 1px;
    padding: 0 10px;
}

.nav-link {
    color: #000;
    font-family: 'Quicksand', sans-serif;
    font-weight: 500;
    font-size: 20px;
    text-transform: uppercase;
}

.nav-link:hover {
    color: #bd0000;
}

.navbar .navbar-nav .nav-item:not(:last-child) .nav-link {
    border-bottom: none;
}

.nav-item:first-child .nav-link {
    padding-left: 30px;
}

.active {
    color: #000;
    font-weight: bold;
}

/* footer */

footer p {
    color: #000;
}

/* page navigation */

.page-ul, .page-li {
    display: flex;
}

.page-li a {
    margin: auto;
}

.btn-page a {
    color: #000;
    font-weight: bold;
    background-color: transparent;
    font-size: 20px;
    border: none;
}

.btn-page a:hover {
    color: #bd0000;
    background-color: transparent;
}

/* blog post card and gpu card*/

.image-container img {
    border: 2px solid #fafaff;
    border-radius: .90rem;
    background-color: #fafaff;
}

#gpu-list .card-img-top {
    width: 100%;
    height: 13vw;
    object-fit: cover;
    object-position: bottom;
}

#post-list .card-img-top {
    width: 100%;
    height: 18vw;
    object-fit: cover;
    object-position: bottom;
}

.masthead-image .card-img-top {
    width: 100%;
    height: 40vw;
    object-fit: cover;
    object-position: bottom;
}

.post-subtitle {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: bold;
}

.card-img-overlay {
    opacity: 0.5;
}

.card-brand {
    font-size: 20px;
    text-decoration: underline;
}

.card {
    background-color: transparent;
    border: none;
    border-radius: .90rem;
}

.card-link{
    position:relative;
   }

.card-title {
    color: #000;
    font-family: 'Quicksand', sans-serif;
}

.card-parent:not(:last-child) {
    border-right: 1px solid #77777725;
}

.card-border:not(:first-child) {
    border-top: 1px solid #77777725;
}

.card-parent:hover .image-container img {
    opacity: 0.5;
}

.card-parent:hover .post-link *,
.card-parent:hover .card-text,
.card-parent:hover .card-title {
    color: #bd0000;
}

.post-link:hover {
    text-decoration: none;
}

.card-text {
    color: #000;
    font-family: 'Source Sans Pro', sans-serif;
}

.filter-menu a {    
    color: #000;
    font-family: 'Quicksand', sans-serif;   
}

.filter-menu a:hover {
    background-color: #343a40;
    color: #fafaff;
    font-weight: bold;
}

.filter-menu .filter-admin:hover {
    background-color: #bd0000;
}

.filter-btn a,
.edit-btn a,
.add-btn a,
.del-btn a,
.error-btn a,
.signout-btn a,
.empty-btn a,
.form-btn a {
    text-decoration: none;
    color: #000;
    font-family: 'Quicksand', sans-serif;
}

.edit-btn i {
    background-color: transparent;
    color: #000;
}

.filter-btn:hover a,
.edit-btn:hover a,
.edit-btn:hover i,
.add-btn:hover a,
.del-btn:hover a,
.error-btn:hover a,
.signout-btn:hover a,
.empty-btn:hover a,
.form-btn:hover a {
    color: #fafaff;
}

.del-p {
    text-align: center;
    width: 100%;
}

.error-parent {
    margin-top: 6rem;
}

.error-title {
    margin: 3rem 0;
    font-size: 80px;
    font-weight: bold;
}

.error-text {
    margin-bottom: 3rem;
}

.error-btn a {
    font-size: 20px;
}

.del-parent button {
    font-size: 40px;
    font-family: 'Quicksand', sans-serif;
}

.del-btn {
    color: #000;
    text-decoration: none;
    font-family: 'Quicksand', sans-serif;
}

.add-btn a {
    font-size: 30px;
}

.add-btn {
    border-radius: 50%;
    border: 2px solid;
    width: 5rem;
    height: 5rem;
}

/* empty posts and gpus */

.empty-gpu,
.empty-post,
.add-gpu,
.add-post {
    font-family: 'Quicksand', sans-serif;
    font-size: 30px; 
}

/* post detail and gpu detail */

.masthead {
    margin-top: 10px;
    width: 100%;
    font-family: 'Quicksand', sans-serif;
}

.masthead-text {
    color: #000;
}

/* .masthead-image {
    width: 100%;
    height: 60vh;
    object-fit: cover;
    overflow: hidden;

} */

.btn-like {
    border: 1px solid transparent;
    background-color: transparent;
    padding: 0;
    height: 26px;
    width: 26px;
}

.btn-like i {
    font-size: 22px;
}

.btn-like:hover {
    color: #bd0000;
    border: 1px solid #bd0000;
    border-radius: .9rem;
}

.gpu-title {
    font-weight: bold;
    font-family: 'Quicksand', sans-serif;
    font-size: 20px;
}

.gpu-text {
    font-size: 16px;
    font-family: 'Source Sans Pro', sans-serif;
}

/* account templates */

.account-image {
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
}

.account-text h2 {
    font-family: 'Quicksand', sans-serif;
    font-weight: 400;
    font-size: 40px;
    font-weight: bold;
}

.account-text p {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 20px;
    margin: 2rem 0;
    padding-right: 5rem;
}

.account-text input {
    display: block;
}

.account-text button {
    font-family: 'Quicksand', sans-serif;
}

.signout-btn {
    font-size: 30px;
    width: 5rem;
    margin-right: 1rem;
    color: #000;
}


@media screen and (max-width: 1000px) {

    /* navbar */

    .navbar .navbar-nav .nav-item:not(:last-child) .nav-link {
        border-bottom: 1px solid #77777725;
    }

    .nav-item:first-child .nav-link {
        padding-left: 0px;
    }

    /* post and gpu list */

    .card-title {
        font-size: 20px;
        font-weight: bold;
        border-bottom: 1px solid #77777725;
        padding-bottom: 1rem;
    }

}

@media screen and (max-width: 767px) {

    /* blog post card and gpu card */

    .card-parent:not(:last-child) {
        border-bottom: 1px solid #77777725;
    }

    #gpu-list .card-img-top,
    #post-list .card-img-top,
    .masthead-image .card-img-top {
        width: 100%;
        height: 50vw;
        object-fit: cover;
    }

}

@media screen and (max-width: 425px) {


    /* account templates */

    .account-image {
        height: 15rem;
    }

    .account-text p {
        padding-right: 0;
    }

    .account-text h2 {
        font-size: 30px;
        font-weight: bold;
    }
}

